--- a/style.css
+++ b/style.css
@@ -9,18 +9,20 @@ body {
 }
 
 #contenedor {
-  width: 1100px;
+  max-width: 1100px;
   margin: 8px auto;
   border: 10px solid orange;
 }
 
 header {
-  height: 100px;
   width: 100%;
   border: 0px;
   text-align: center;
   border-bottom: ridge 1px black;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
+
 ul li {
   list-style: none;
   text-align: center;
@@ -29,21 +31,30 @@ ul li {
 }
 
 .tarjeta {
-  width: 50%;
-  max-width: 540px;
-  margin-left: 250px;
-  margin-right: 250px;
-  margin-top: 20px;
+  display: flex;
+  flex: 1;
+  justify-content: center;
 }
 
-#fot {
+.fot {
   width: 100%;
+  object-fit: cover;
+  height: 100%;
+}
+.tituloproy {
+  text-align: center;
+  padding-top: 30px;
 }
 
 #content {
   width: 100%;
   min-height: 500px;
   padding: 40px;
+  gap: 10px;
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  flex-direction: row;
 }
 
 footer {
